fixed splash screen, done home screen,handling navigation library 50%

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_nav">For you</string>
     <string name="desc_nav">Showing 889 photos “for you”</string>
     <string name="scroll_view_desc">list image special</string>
+    <string name="list_image">grid product</string>
 </resources>
